<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go Mongo!</string>
    
    <!-- Navigation -->
    <string name="button_home">Home</string>
    <string name="button_find_us">Find Us</string>
    <string name="button_create">Create</string>
    <string name="button_fun">Fun</string>
    <string name="button_about">About</string>
    <string name="button_loc_search">Location Search</string>
    <string name="button_create_bowl">Create-A-Bowl</string>
    <string name="button_mongo_photo">Mongo Photo!</string>
    <string name="button_now_at">Now at bd\'s...</string>
    <string name="button_take_photo">Take a photo!</string>
    <string name="button_view_gallery">Photo Library</string>
    <string name="button_cancel">Cancel</string>
    
    <!-- Find Us -->
    <string name="title_loc_search">Location Search</string>
    <string name="title_loading_locations">Searching</string>
    <string name="body_loading_locations">Please wait while we find the BD\'s locations nearest you.</string>
    
    <string name="title_hours">Hours</string>
    <string name="title_contact">Contact</string>
    <string name="button_get_directions">Get Directions</string>
    <string name="button_share_location">Share Location</string>
    
    <string name="location_search_hint">Search for a location</string>
    <string name="distance_away_format">%s mi away</string>
    
    <!-- Create a bowl -->
    <string name="title_create_bowl_activity">Create-A-Bowl</string>
    <string name="hint_name_your_bowl">Tap To Name Your Bowl</string>
    <string name="button_more_info">More Info</string>
    <string name="default_bowl_title">Untitled</string>
    <string name="button_done">Done</string>
    <string name="add_food_title">Select Ingredients</string>
    <string name="ingredients_disclaimer">Ingredients may vary by location.</string>
    
    <string name="category_meats_title">Meat &amp; Seafood</string>
    <string name="category_meats_limit_title">That\'s a lot of meat!</string>
    <string name="category_meats_limit_message">As a general rule, try to limit the meat and seafood in your bowl to about 9 ounces or less (about 3 full tongs).</string>
    
    <string name="category_veggies_title">Vegetables</string>
    <string name="category_veggies_limit_title">Veggie overload!</string>
    <string name="category_veggies_limit_message">We love vegetables too, but you\'ll want to limit your vegetables to around 10 ounces worth (our bowls aren\'t that gigantic).</string>
    
    <string name="category_sauces_title">Sauces</string>
    <string name="category_sauces_limit_title">Your sauces cup runneth over!</string>
    <string name="category_sauces_limit_message">Our sauce cups hold about 3 ounces, so up to 3 ounces of your favorite sauces should do it.</string>
    
    <string name="category_spices_title">Spices</string>
    <string name="category_spices_limit_title">That\'s a lot of spices!</string>
    <string name="category_spices_limit_message">You\'ll probably want to consider using less spice than this. You do want to taste the other delicious ingredients in your bowl don\'t you?</string>

    <string name="category_starches_title">Sides</string>
    <string name="category_starches_limit_title">Too many sides</string>
    <string name="category_starches_limit_message">That\'s a lot of sides.</string>
    
    <string name="nut_info_title">Nutritional Facts</string>
    <string name="serving_nut_info">Serving Size</string>
    <string name="calories_nut_info">Total Calories</string>
    <string name="fat_nut_info">Total Fat (g)</string>
    <string name="satfat_nut_info">Saturated Fat (g)</string>
    <string name="carbs_nut_info">Carbohydrates (g)</string>
    <string name="fiber_nut_info">Dietary Fiber (g)</string>
    <string name="protein_nut_info">Protein (g)</string>
    
    <string name="loading_foods_title">Loading Ingredients</string>
    <string name="loading_foods_message">Please wait while the latest BD\'s menu is being loaded.</string>
        
    <string name="button_cant_add_food_dismiss">OK</string>
    
    <!-- Share Bowl -->
    <string name="share_bowl_title">Share Your Bowl</string>
    <string name="button_nutrition_info">Nutritional Info</string>
    <string name="button_create_another_bowl">Do it again!</string>
    <string name="button_share_bowl">Share Bowl</string>
    
    <!-- Image Annotations -->
    <string name="button_add_annotation">Add Sticker</string>
    <string name="button_save_and_share">Save</string>
    <string name="button_remove_sticker">Remove</string>
    <string name="title_share_chooser">Share via...</string>
    <string name="help_view_more_stickers">Swipe left or right for more stickers.</string>
    <string name="reshare_image">Share Image Again</string>
    
    <!-- About Page -->
    <string name="about_us_text">bd\'s Mongolian Grill is an interactive create your own stir-fry experience. Mongolian refers to an age old cooking process from Mongolia where after a long day of battle warriors would cook meat and veggies on their overturned shields. No battles here just a great Mongolian cooking tradition.</string>
    <string name="hunt_gather_feast_text">Hunt! Gather! Cook! Feast!</string>
    
    <!-- Promotions Page -->
    <string name="loading_promotions_title">Loading Promotions</string>
    <string name="loading_promotions_message">Please wait while the latest BD\'s promotions are loaded.</string>
    <string name="button_promotion_find_us">Find your closest bd\'s</string>
    <string name="button_close">Close</string>
    
    <!-- Errors -->
    <string name="error_couldnt_access_sdcard">There was a problem setting up your image. Please make sure your SD card is connected properly and try again.</string>
    <string name="error_image_for_editing_missing">There was a problem accessing your image from the camera. Please try capturing again.</string>
    <string name="error_problem_getting_ingredients">There was a problem pulling the latest BD\'s ingredients. Please make sure you are connected to the internet.</string>
    <string name="error_problem_getting_locations">Location search is temporarily unavailable. Please make sure you are connected to the internet.</string>
    <string name="error_problem_getting_your_location">Your location is temporarily unavailable. Searching for BD\'s locations near an arbitrary place.</string>
    <string name="error_problem_connecting_to_database">There was a problem connecting to the application\'s data. Please make sure your SD card is connected properly.</string>
    <string name="error_bowl_needs_name">Your bowl needs a name and some ingredients before you can share it.</string>
    <string name="error_preparing_bowl">There was a problem preparing the bowl you\'re sharing. Please make sure you are connected to your network or wi-fi.</string>
    <string name="error_connecting_to_internet">There was a problem connecting to the internet. Please make sure you are connected to your network or wi-fi.</string>
    <string name="error_location_not_recognized">There was a problem finding the location to entered. Make sure you spelled the address correctly.</string>
</resources>
