<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background_home_logo">
  <include layout="@layout/navigation_menu" />
  <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal|bottom"
                android:id="@+id/home_main_menu">
    <Button android:text="@string/button_loc_search"
            android:id="@+id/button_find_us"
            style="@style/MongoButton" />
    <Button style="@style/MongoButton"
            android:text="@string/button_create_bowl"
            android:id="@+id/button_create" />
    <Button style="@style/MongoButton"
            android:text="@string/button_mongo_photo"
            android:id="@+id/button_photo" />
    <Button style="@style/MongoButton"
            android:text="@string/button_now_at"
            android:id="@+id/button_promotions" />
  </LinearLayout>
</LinearLayout>
