<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background">
  <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/submenu_bar"
                android:padding="5dip">
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:background="@drawable/submenu_button"
            android:text="@string/button_cancel"
            android:id="@+id/button_cancel" />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:textSize="20dp"
              android:textColor="#FFF"
              android:shadowColor="#000"
              android:shadowRadius="3"
              android:text="@string/add_food_title" />
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:background="@drawable/submenu_button"
            android:layout_alignParentRight="true"
            android:text="@string/button_done"
            android:id="@+id/button_done" />
  </RelativeLayout>
  <TextView style="@style/ActivityTitle"
            android:id="@+id/add_food_category" />
  <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ingredients_disclaimer"
            android:textColor="#FFF"
            android:textStyle="italic" />
  <LinearLayout style="@style/InsetLightFrame"
                android:layout_weight="1"
                android:padding="4dip">
	  <ListView android:cacheColorHint="#FFF"
	            android:descendantFocusability="afterDescendants"
	            android:choiceMode="singleChoice"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:divider="@null"
	            android:id="@+id/add_food_list" />
  </LinearLayout>
</LinearLayout>
