<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
	
	<!-- Minimized UI -->
	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:gravity="left|bottom">
	  <ImageView android:layout_width="wrap_content"
	             android:layout_height="64dp"
	             android:adjustViewBounds="true"
	             android:id="@+id/food_item_icon"
	             android:src="@drawable/mongo_logo" />
	  <LinearLayout android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical">
	    <TextView android:layout_height="wrap_content"
	              android:layout_width="wrap_content"
	              android:id="@+id/food_item_title" />
	    <LinearLayout android:layout_width="wrap_content"
	                  android:layout_height="wrap_content">
		    <Button android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/button_food_item_subtract"
		            android:text="-" />
		    <TextView android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:id="@+id/food_item_count"
		              android:text="#" />
		    <Button android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/button_food_item_add"
		            android:text="+" />
	    </LinearLayout>
	  </LinearLayout>
	  <Button android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:textColor="#CCC"
	          android:text="More info"
	          android:background="#00000000"
	          android:drawableRight="@drawable/expander_ic_minimized"
	          android:id="@+id/food_item_more_info" />
	</LinearLayout>
	
	<!-- More details UI -->
	<TableLayout android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:stretchColumns="1"
	             android:visibility="gone"
	             android:id="@+id/more_details_pane">
	   <TableRow android:background="@color/nutrition_odd_row">
	     <TextView android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/nut_info_title" />
	   </TableRow>
	   
	   <TableRow android:background="@color/nutrition_even_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/serving_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/serving_nut_info" />
     </TableRow>
     
     <TableRow android:background="@color/nutrition_odd_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/calories_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/calories_nut_info" />
     </TableRow>
     
     <TableRow android:background="@color/nutrition_even_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fat_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/fat_nut_info" />
     </TableRow>
     
     <TableRow android:background="@color/nutrition_odd_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/satfat_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/satfat_nut_info" />
     </TableRow>
     
     <TableRow android:background="@color/nutrition_even_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/carbs_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/carbs_nut_info" />
     </TableRow>
     
     <TableRow android:background="@color/nutrition_odd_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fiber_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/fiber_nut_info" />
     </TableRow>
     
     <TableRow android:background="@color/nutrition_even_row">
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/protein_nut_info" />
       <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:id="@+id/protein_nut_info" />
     </TableRow>
     
	</TableLayout>
	
</LinearLayout>