<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <com.gomongo.app.ui.AnnotationEditorView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:id="@+id/preview_image_view" />
  <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_alignBottom="@id/preview_image_view">
    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/button_cancel" />
    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_add_annotation"
            android:id="@+id/button_add_annotation" />
    <CheckBox android:layout_width="48dip"
              android:layout_height="48dip"
              android:scaleType="fitCenter"
              style="@android:style/Widget.Button"
              android:button="@android:drawable/ic_menu_delete"
              android:id="@+id/button_delete_sticker" />
    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save_and_share"
            android:id="@+id/button_save_and_share" />
  </LinearLayout>
</RelativeLayout>
