<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background">
  <include layout="@layout/navigation_menu" />
  <TextView style="@style/ActivityTitle"
            android:text="@string/share_bowl_title"
            android:id="@+id/share_bowl_title"
            android:background="@drawable/submenu_bar"
            android:paddingTop="5dip"
            android:layout_marginTop="@dimen/navigation_fade_offset" />
  <LinearLayout android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
	                  android:layout_height="match_parent">
      <RelativeLayout android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_centerHorizontal="true">
        <ImageView android:src="@drawable/bowl_glow"
                   android:scaleType="fitXY"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/bowl_glow_image"
                   android:layout_centerInParent="true" />
        <TextView style="@style/BowlTitleStyle"
                  android:id="@+id/textview_bowl_title"
                  android:layout_centerInParent="true" />
      </RelativeLayout>
      
      <LinearLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">
	      <Button style="@style/MongoButton"
                android:text="@string/button_nutrition_info"
	              android:id="@+id/button_nutrition_info"
	              android:drawableLeft="@drawable/icon_info" />
	      <Button style="@style/MongoButton"
	              android:text="@string/button_share_bowl"
	              android:id="@+id/button_share_bowl"
	              android:drawableLeft="@drawable/icon_share" />
	      <Button style="@style/MongoButton"
	              android:text="@string/button_create_another_bowl"
	              android:id="@+id/button_create_another_bowl"
	              android:drawableLeft="@drawable/icon_bowl" />
      </LinearLayout>
    </RelativeLayout>
  </LinearLayout>
</LinearLayout>
